# super-goal

./: .gitignore  AGENTS.md  LICENSE  README.md  README_cn.md  pyproject.toml  run_chess.bat
.opencode/agents/: goal-orch.md  goal-worker.md  loop-orch.md  loop-worker.md
.opencode/commands/: goal.md  loop.md
backend/: main.py  pyproject.toml  run.py
backend/app/: ai_engine.py  game_manager.py  models.py
backend/app/routers/: games.py
backend/tests/: conftest.py  test_ai_engine.py  test_e2e.py  test_edge_cases.py  test_game_manager.py  test_imports.py  test_main.py  test_models.py  test_routers.py
docs/: opencode-autonomous-orchestration.md
docs/chess-web-app/: architecture.md  report.md  reqs-manifest.md
docs/fibonacci-script/: architecture.md  report.md  reqs-manifest.md
docs/fund-000218-research/: architecture.md  report.md  reqs-manifest.md
docs/fund-000218-research/data/: comprehensive-scorecard.md  fund-basic-info.md  gold-macro-outlook.md  manager-eval.md  performance-risk.md  portfolio-holdings.md
docs/hanoi-tower-game/: architecture.md  report.md  reqs-manifest.md
docs/nvda-research/: architecture.md  report.md  reqs-manifest.md
docs/typing-practice-game/: architecture.md  report.md  reqs-manifest.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: chessApi.ts
src/fibonacci/: __init__.py  __main__.py  calculator.py  cli.py
src/hanoi-tower-game/: index.html  style.css  test.html
tests/: test_fibonacci.py
typing-practice-game/: index.html  main.js  style.css
(+34 files in other folders)
