[project]
name = "fibonacci-calculator"
version = "0.1.0"
description = "Command-line Fibonacci sequence calculator"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fibonacci = "fibonacci.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/fibonacci"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
